--- a/Front/final-project/src/app/views/app/categories/categories.component.html
+++ b/Front/final-project/src/app/views/app/categories/categories.component.html
@@ -1,1 +1,2 @@
-<p>categories works!</p>
+<app-breadcrumb></app-breadcrumb>
+<app-product-list-container [products]="products"></app-product-list-container>
