--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -149,11 +149,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="small-banner-content" style="background-image: url(/assets/icons/full_banner.jpg);">
+                <div class="small-banner-content"
+                    style="background-image: url(https://res.cloudinary.com/dyqcmbewn/image/upload/v1619193767/infixvuci/macbook-banner_xhzu2n.jpg);">
                     <div class="small-banner-text">
-                        <h6 class="sub-title">Sofa Furniture</h6>
-                        <h4 class="big-title">Wooden Minimalistic Chairs for Home.</h4>
-                        <p>SALE UP TO <span>40%</span> OFF</p>
+                        <h6 class="sub-title">Apple</h6>
+                        <h4 class="big-title">Yeni Nəsil İldırım Sürətli Macbooklar</h4>
+                        <p>Sadəcə <span>1299 ₼</span> başlayaraq</p>
                     </div>
                 </div>
             </div>
@@ -164,20 +165,20 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/delevary.png'" [title]="'Free Delivery'"
-                    [text]=" 'Free Shipping on Order $500+' "></app-offer>
+                <app-offer [icon]="'/assets/icons/delevary.png'" [title]="'Pulsuz Çatdırılma'"
+                    [text]=" '500 manata qədər sifarişdə pulsuz çatdırılma' "></app-offer>
             </div>
             <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/clock.png'" [title]="'90 DAYS RETURN'"
-                    [text]=" 'Change of mind is not applicable' "></app-offer>
+                <app-offer [icon]="'/assets/icons/clock.png'" [title]="'Geri qaytarma imkanı'"
+                    [text]=" 'Fikir dəyişikliyi istisna' "></app-offer>
             </div>
             <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/payment.png'" [title]="'SECURE PAYMENT'"
-                    [text]=" 'World’s secure payment methods' "></app-offer>
+                <app-offer [icon]="'/assets/icons/payment.png'" [title]="'Təhlükəsiz ödəniş'"
+                    [text]=" 'Dünyandakı təhlükəsiz ödəniş metodları ilə' "></app-offer>
             </div>
             <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/help.png'" [title]="'24/7 HELP CENTER'"
-                    [text]=" 'Round-the-clock assistance Helpline' "></app-offer>
+                <app-offer [icon]="'/assets/icons/help.png'" [title]="'24/7 Dəstək'"
+                    [text]=" 'Günün 24 saatı dəstək xətti' "></app-offer>
             </div>
         </div>
     </div>
