--- a/Front/final-project/src/app/views/app/home/home.component.scss
+++ b/Front/final-project/src/app/views/app/home/home.component.scss
@@ -192,7 +192,7 @@
 }
 #small-banner {
   .small-banner-content {
-    background-position: 0 0;
+    background-position: center center;
     background-size: cover;
     padding: 53px 20px 54px 120px;
     background-repeat: no-repeat;
