--- a/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
+++ b/Front/final-project/src/app/shared/components/single-product/single-product.component.scss
@@ -4,6 +4,9 @@
   overflow: hidden;
   text-align: center;
   border: 1px solid $color-border;
+  max-height: 450px;
+  min-height: 450px;
+  margin-bottom: 10px;
   &:hover {
     .img-area {
       img {
