--- a/Front/final-project/src/app/shared/containers/top-brands-container/top-brands-container.component.html
+++ b/Front/final-project/src/app/shared/containers/top-brands-container/top-brands-container.component.html
@@ -3,40 +3,15 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="title-area">
-                    <h4 class="main-title">Top Brands</h4>
+                    <h4 class="main-title">Partnyorlar</h4>
                     <div class="border-dash"></div>
                 </div>
             </div>
             <div class="col-lg-12">
                 <owl-carousel-o [options]="options">
-                    <ng-template carouselSlide>
+                    <ng-template carouselSlide *ngFor="let brand of brands">
                         <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="brand">
-                            <img src="/assets/icons/brand.png" alt="">
+                            <img src="{{brand.logo}}" alt="">
                         </div>
                     </ng-template>
                 </owl-carousel-o>
