--- a/Front/final-project/src/app/shared/containers/top-brands-container/top-brands-container.component.scss
+++ b/Front/final-project/src/app/shared/containers/top-brands-container/top-brands-container.component.scss
@@ -17,7 +17,7 @@
     text-align: center;
     margin-bottom: 60px;
     img {
-      width: auto;
+      max-width: 100px;
       display: inline-block;
     }
   }
