Cart page completed totalPriceCount pipe created

--- a/Front/final-project/src/app/shared/components/filter/filter.component.html
+++ b/Front/final-project/src/app/shared/components/filter/filter.component.html
@@ -162,7 +162,7 @@
         </div>
         <div class="filter-box">
             <h6 class="filter-title">
-                Filter by Size
+                Filter by Star
             </h6>
             <ul>
                 <li>
