--- a/Front/final-project/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/Front/final-project/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -4,11 +4,11 @@
             <div class="col-lg-12">
                 <div class="breadcrumb-area" style="background-image: url('/assets/icons/breadcrumb.jpg');">
                     <div class="breadcrumb-content">
-                        <h4>New Arrivals</h4>
+                        <h4>{{title}}</h4>
                         <ul>
-                            <li><a [routerLink]="['']">Home</a></li>
+                            <li><a [routerLink]="['']">Ana Səhifə</a></li>
                             <li>
-                                <p> / NEW ARRIVALS</p>
+                                <p> / {{title}}</p>
                             </li>
                         </ul>
                     </div>
