--- a/Front/final-project/src/app/shared/components/single-product/single-product.component.html
+++ b/Front/final-project/src/app/shared/components/single-product/single-product.component.html
@@ -26,7 +26,7 @@
         </div>
         <p *ngIf="product?.category!=null">{{product?.category.name}}</p>
         <h6>
-            <a [routerLink]="['/app/product']">{{product?.name}}</a>
+            <a [routerLink]="['/app/product',product.id]">{{product?.name}}</a>
         </h6>
         <span class="price">{{product?.price}} ₼</span>
     </div>
