--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -14,7 +14,7 @@
                             class="btn btn-pink">{{collections[0]?.btnText}}</a>
                     </div>
                     <div class="collection-product">
-                        <img src="{{collections[0]?.product.photos[0]}}" alt="">
+                        <img src="{{collections[0]?.product.photos[3]}}" alt="">
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
     <app-products-slider-container [topSell]="true" [title]="'Çox Satılan Məhsullar'"></app-products-slider-container>
 </section>
 <app-top-brands-container></app-top-brands-container>
-<section id="blog">
+<!-- <section id="blog">
     <div class="container">
         <h4 class="main-title">Form Our Blog</h4>
         <div class="row">
@@ -202,4 +202,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
