--- a/Front/final-project/src/app/views/app/hot-deals/hot-deals.component.html
+++ b/Front/final-project/src/app/views/app/hot-deals/hot-deals.component.html
@@ -1,1 +1,2 @@
-<p>hot-deals works!</p>
+<app-breadcrumb [title]=" 'Ən Yaxşı Təkliflər' "></app-breadcrumb>
+<app-product-list-container [products]="products"></app-product-list-container>
