--- a/Front/final-project/src/app/views/app/new-arrivals/new-arrivals.component.html
+++ b/Front/final-project/src/app/views/app/new-arrivals/new-arrivals.component.html
@@ -1,2 +1,2 @@
-<app-breadcrumb></app-breadcrumb>
+<app-breadcrumb [title]=" 'Yeni gələnlər' "></app-breadcrumb>
 <app-product-list-container [products]="products"></app-product-list-container>
