--- a/Front/final-project/src/app/views/app/trending/trending.component.html
+++ b/Front/final-project/src/app/views/app/trending/trending.component.html
@@ -1,1 +1,2 @@
-<p>trending works!</p>
+<app-breadcrumb [title]=" 'Trend' "></app-breadcrumb>
+<app-product-list-container [products]="products"></app-product-list-container>
