--- a/Front/final-project/src/styles.scss
+++ b/Front/final-project/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400;1,600&display=swap");
 @import "~bootstrap/scss/bootstrap.scss";
+@import "~angular-notifier/styles.scss";
 @import "~ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
 @import "~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
 @import "~@ng-select/ng-select/scss/material.theme.scss";
