--- a/Front/final-project/src/app/shared/containers/layout/header/header.component.scss
+++ b/Front/final-project/src/app/shared/containers/layout/header/header.component.scss
@@ -59,7 +59,7 @@ ul {
       align-items: center;
       a {
         margin: 0 20px;
-        color: white;
+        color: black;
         .icon {
           position: relative;
           .count {
@@ -73,8 +73,42 @@ ul {
             text-align: center;
             left: 16px;
             top: -2px;
+            color: white;
           }
         }
+        &:hover {
+          span {
+            color: $color-pink-second;
+          }
+        }
+      }
+      .login {
+        position: relative;
+        &:hover {
+          .logout {
+            visibility: visible;
+            opacity: 1;
+          }
+        }
+      }
+      .login-register {
+        a {
+          transition: 0.2s;
+          &:hover {
+            color: $color-pink-second;
+          }
+        }
+      }
+      .logout {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        top: 28px;
+        display: flex;
+        justify-content: center;
+        background: white;
+        padding: 10px 0;
+        box-shadow: 0px 3px 16px 0px rgb(0, 0, 0, 3%);
       }
     }
   }
