--- a/Front/final-project/src/app/views/app/shop-details/shop-details.component.scss
+++ b/Front/final-project/src/app/views/app/shop-details/shop-details.component.scss
@@ -1,6 +1,22 @@
 @import "/src/assets/scss/variables";
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
 #product-details {
   padding: 100px 0 53px 0;
+  .details-title {
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-right: 10px;
+  }
+  .detail {
+    margin-bottom: 6px;
+    .detail-name {
+      font-size: 16px;
+      color: #676e8b;
+      font-weight: 400;
+    }
+  }
   .product-photos {
     display: flex;
     width: 100%;
@@ -42,8 +58,14 @@
           font-size: 14px;
         }
       }
+      .new-price {
+        font-size: 25px;
+        color: $color-pink-second;
+        font-weight: 600;
+      }
     }
     .product-details-body {
+      margin: 30px 0;
       p {
         font-size: 15px;
         font-weight: 400;
@@ -51,18 +73,10 @@
         color: #676e8b;
         margin-bottom: 0;
       }
-
       .product-option {
         display: flex;
         align-items: center;
         margin: 20px 0;
-
-        .option-title {
-          font-weight: 600;
-          font-size: 14px;
-          text-transform: uppercase;
-          margin-right: 10px;
-        }
         .option-value {
           margin-right: 5px;
           .memory {
@@ -78,6 +92,7 @@
               border-radius: 5px;
               text-align: center;
               cursor: pointer;
+              margin-right: 5px;
             }
             li.active {
               background-color: $color-pink-second;
@@ -86,8 +101,196 @@
           }
         }
       }
+      .favorite {
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 600;
+        color: #676e8b;
+        display: inline-flex;
+        align-items: center;
+        margin-left: 15px;
+        i {
+          font-size: 22px;
+          color: #090b17;
+          margin-right: 15px;
+        }
+      }
     }
     .product-details-footer {
+      border-top: 1px solid $color-border;
+      padding-top: 25px;
     }
   }
+  .description-review-area {
+    padding: 30px 0 80px 0;
+    .tab-buttons {
+      border-bottom: 1px solid $color-border;
+      .nav-item {
+        a {
+          font-size: 20px;
+          font-weight: 600;
+          color: #090b17;
+          position: relative;
+          padding: 10px;
+          text-decoration: none;
+          &::before {
+            position: absolute;
+            content: "";
+            width: 100%;
+            background-color: $color-border;
+            height: 2px;
+            left: 0;
+            bottom: 0;
+            transition: 0.3s;
+            opacity: 0;
+          }
+          &:hover {
+            &::before {
+              background-color: $color-pink-second;
+              opacity: 1;
+            }
+          }
+        }
+        a.active {
+          color: $color-pink-second;
+          &::before {
+            background-color: $color-pink-second;
+            opacity: 1;
+          }
+        }
+      }
+    }
+    .tab-content {
+      h3 {
+        font-size: 22px;
+        font-weight: 600;
+        color: #090b17;
+        margin: 52px 0 30px 0;
+      }
+      h4 {
+        font-size: 60px;
+        font-weight: 700;
+        color: #fd1c5e;
+        margin-bottom: 7px;
+        line-height: 1;
+      }
+      .ratings {
+        padding-top: 15px;
+        display: flex;
+        justify-content: space-around;
+        .progress-bar-area {
+          width: 80%;
+          .single-progress-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            .rating-progress-bar {
+              margin-left: 30px;
+              display: flex;
+              align-items: center;
+              span {
+                margin-left: 10px;
+                font-size: 14px;
+                font-weight: 500;
+                color: #202e3b;
+              }
+            }
+            .progress {
+              margin-bottom: 25px;
+              height: 11px;
+              border-radius: 4px;
+              width: 100%;
+              .progress-bar {
+                height: 11px;
+                border-radius: 4px;
+                background-color: $color-pink-second !important;
+              }
+            }
+          }
+        }
+      }
+      .review-area {
+        .review-content {
+          display: flex;
+          align-items: center;
+          &:not(:last-child) {
+            border-bottom: 1px solid $color-border;
+            padding: 56px 0 40px 0;
+          }
+          .user-img {
+            margin-right: 40px;
+            img {
+              max-width: 100px;
+              border-radius: 50%;
+            }
+          }
+          .review-body {
+            .star {
+              margin-top: 10px;
+              align-items: center;
+              margin-bottom: 20px;
+              span {
+                font-size: 14px;
+                font-weight: 500;
+                color: #6c738f;
+                margin-left: 10px;
+              }
+            }
+            p {
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 26px;
+              color: #676e8b;
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+  .also-like {
+    border-top: 1px solid $color-border;
+    padding: 10px;
+  }
+}
+
+/* Styling h1 and links
+––––––––––––––––––––––––––––––––– */
+h1[alt="Simple"] {
+  color: white;
+}
+a[href],
+a[href]:hover {
+  color: grey;
+  font-size: 0.5em;
+  text-decoration: none;
+}
+
+.starrating {
+  font-size: 4px;
+  justify-content: flex-end;
+}
+.starrating > input {
+  display: none;
+} /* Remove radio buttons */
+
+.starrating > label:before {
+  content: "\f005"; /* Star */
+  margin: 2px;
+  font-size: 8em;
+  font-family: FontAwesome;
+  display: inline-block;
+}
+
+.starrating > label {
+  color: #22222285;
+  cursor: pointer;
+}
+
+.starrating > input:checked ~ label {
+  color: #ffca08;
+}
+
+.starrating > input:hover ~ label {
+  color: #ffca08;
 }
