--- a/Front/final-project/src/app/views/auth/login/login.component.html
+++ b/Front/final-project/src/app/views/auth/login/login.component.html
@@ -1,1 +1,47 @@
-<p>login works!</p>
+<app-header></app-header>
+<section id="login">
+    <div class="container">
+        <div class="auth-form">
+            <div class="auth-inner">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3>Daxil Ol</h3>
+                        <form [formGroup]="loginForm" (ngSubmit)="login()">
+                            <div class="form-group">
+                                <input type="text" placeholder="E-poçt" name="email" formControlName="email">
+                                <div *ngIf="submitted && f.email.errors" class="text-danger">
+                                    <div *ngIf="f.email.errors.required">E-poçt boş ola bilməz</div>
+                                    <div *ngIf="f.email.errors.email">E-poçt düzgün yazılmayıb</div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" placeholder="Şifrə" name="password" formControlName="password">
+                                <div *ngIf="submitted && f.password.errors" class="text-danger">
+                                    <div *ngIf="f.password.errors.required">Şifrə boş ola bilməz</div>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between my-4">
+                                <div class="conditions m-0">
+                                    <label class="primary-checkbox d-flex ">
+                                        <input checked="" type="checkbox">
+                                        <span class="checkmark mr_15"></span>
+                                    </label>
+                                    <p class="font_14 f_w_500 mb-0">Məni xatırla</p>
+                                </div>
+                                <a class="forgot-password" [routerLink]="['/auth/forget-password']">Şifrəni
+                                    unutmusan?</a>
+                            </div>
+
+                            <button class="btn btn-pink w-100 mt-2" type="submit">Daxil ol</button>
+                        </form>
+                        <div class="signup d-flex">
+                            <p>Hesabın yoxdu? </p>
+                            <a [routerLink]="['/auth/register']">Qeydiyatdan keç</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<app-footer></app-footer>
