--- a/Front/final-project/src/app/views/auth/register/register.component.html
+++ b/Front/final-project/src/app/views/auth/register/register.component.html
@@ -1,1 +1,62 @@
-<p>register works!</p>
+<app-header></app-header>
+<section id="register">
+    <div class="container">
+        <div class="row">
+            <div class="auth-form">
+                <div class="auth-inner">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h3>Qeydiyyatdan Keçin</h3>
+                            <form [formGroup]="registerForm" (ngSubmit)="register()">
+                                <div class="form-group">
+                                    <input type="text" placeholder="Ad" name="name" formControlName="name">
+                                    <div *ngIf="submitted && f.name.errors" class="text-danger">
+                                        <div *ngIf="f.name.errors.required">Ad boş ola bilməz</div>
+                                        <div *ngIf="f.name.errors.email">Ad düzgün yazılmayıb</div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" placeholder="Soyad" name="surname" formControlName="surname">
+                                    <div *ngIf="submitted && f.surname.errors" class="text-danger">
+                                        <div *ngIf="f.surname.errors.required">Soyad boş ola bilməz</div>
+                                        <div *ngIf="f.surname.errors.email">Soyad düzgün yazılmayıb</div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" placeholder="Nömrə" name="phone" formControlName="phone">
+                                    <div *ngIf="submitted && f.phone.errors" class="text-danger">
+                                        <div *ngIf="f.phone.errors.required">Nömrə boş ola bilməz</div>
+                                        <div *ngIf="f.phone.errors.email">Nömrə düzgün yazılmayıb</div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" placeholder="E-poçt" name="email" formControlName="email">
+                                    <div *ngIf="submitted && f.email.errors" class="text-danger">
+                                        <div *ngIf="f.email.errors.required">E-poçt boş ola bilməz</div>
+                                        <div *ngIf="f.email.errors.email">E-poçt düzgün yazılmayıb</div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" placeholder="Şifrə" name="password"
+                                        formControlName="password">
+                                    <div *ngIf="submitted && f.password.errors" class="text-danger">
+                                        <div *ngIf="f.password.errors.required">Şifrə boş ola bilməz</div>
+                                    </div>
+                                </div>
+                                <div class="conditions">
+                                    <label class="primary-checkbox d-flex ">
+                                        <input checked="" type="checkbox">
+                                        <span class="checkmark mr_15"></span>
+                                    </label>
+                                    <p class="font_14 f_w_500 mb-0">Bütün şərtləri oxudum və qəbul edirəm.</p>
+                                </div>
+                                <button class="btn btn-pink w-100 mt-4" type="submit">Qeydiyyatdan keç</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<app-footer></app-footer>
