--- a/Front/final-project/src/assets/scss/_tools.scss
+++ b/Front/final-project/src/assets/scss/_tools.scss
@@ -103,6 +103,7 @@ a {
       transform: scale(1);
     }
   }
+
   input[type="radio"]:checked ~ .checkmark-color.black {
     border-color: #000000;
   }
@@ -158,6 +159,138 @@ a {
   .checkmark-color.yellow {
     &::before {
       background: #eeee22;
+    }
+  }
+}
+
+.auth-form {
+  display: flex;
+  justify-content: center;
+  padding: 57px 0 120px 0;
+  .auth-inner {
+    max-width: 690px;
+    padding: 100px 120px;
+    width: 100%;
+    background-image: linear-gradient(
+      to bottom,
+      rgba(255, 234, 239, 0.1),
+      rgba(64, 232, 221, 0.1)
+    );
+    form {
+      input {
+        height: 50px;
+        border-radius: 0px;
+        border: 0;
+        border-bottom: 1px solid #e1e2e6;
+        font-family: "Jost", sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        color: #090b17;
+        padding: 10px 0px;
+        width: 100%;
+        box-shadow: none !important;
+        background: transparent;
+        padding-bottom: 5px;
+        &:focus-visible {
+          outline: none;
+        }
+      }
+      .conditions {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 22px;
+        .primary-checkbox {
+          display: inline-block;
+          position: relative;
+          margin: 0;
+          align-items: center;
+          margin-right: 5px;
+          input {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            visibility: hidden;
+            &:checked ~ .checkmark {
+              background: #fd1c5e;
+              transition: 0.3s;
+              &::after {
+                width: 100%;
+                height: 100%;
+                border: 0;
+                transition: 0.3s;
+                transform: scale(0);
+              }
+            }
+          }
+        }
+        .primary-checkbox .checkmark {
+          position: relative;
+          width: 18px;
+          height: 18px;
+          top: 0;
+          left: 0;
+          display: block;
+          cursor: pointer;
+          line-height: 18px;
+          flex: 18px 0 0;
+          border-radius: 3px;
+          &::before {
+            content: "\e64c";
+            font-family: "themify";
+            position: absolute;
+            display: block;
+            top: 0px;
+            left: 3px;
+            text-indent: 1px;
+            color: #828bb2;
+            background-color: transparent;
+            border: 0px;
+            -webkit-transform: rotate(8deg);
+            -moz-transform: rotate(8deg);
+            -ms-transform: rotate(8deg);
+            -o-transform: rotate(8deg);
+            transform: rotate(8deg);
+            font-size: 10px;
+            font-weight: 600;
+            line-height: 18px;
+            z-index: 99;
+            color: #fff;
+            transition: 0.3s;
+          }
+        }
+      }
+      p {
+        line-height: 26px;
+        color: #676e8b;
+        font-size: 14px;
+        font-weight: 500;
+      }
+      .forgot-password {
+        font-size: 14px;
+        font-weight: 500;
+        color: #5dabfc;
+        text-decoration: none;
+        transition: 0.3s;
+        &:hover {
+          color: $color-pink-second;
+        }
+      }
+    }
+    .signup {
+      margin-top: 10px;
+      a {
+        text-decoration: none;
+        color: #5dabfc;
+        margin-left: 10px;
+        transition: 0.3s;
+        &:hover {
+          color: $color-pink-second;
+        }
+      }
     }
   }
 }
