shipping front created

--- a/Front/final-project/src/app/shared/containers/layout/header/header.component.html
+++ b/Front/final-project/src/app/shared/containers/layout/header/header.component.html
@@ -103,9 +103,9 @@
                                 <li>
                                     <a [routerLink]="['/app/new-arrivals']">
                                         Yeni Gələnlər
-                                        <fa-icon class="chevron" [icon]="chevron"></fa-icon>
+                                        <!-- <fa-icon class="chevron" [icon]="chevron"></fa-icon> -->
                                     </a>
-                                    <div class="sub-menu content-menu-dropdown">
+                                    <!-- <div class="sub-menu content-menu-dropdown">
                                         <ul>
                                             <li>
                                                 <h6><a href=""> Laptops & Compters </a></h6>
@@ -172,7 +172,7 @@
                                             </li>
                                             <li><a class="btn-pink-small" href="">Shop Now »</a></li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </li>
                                 <li><a [routerLink]="['/app/trending']">Trend</a></li>
                                 <li><a [routerLink]="['/app/hot-deals']"> Ən Yaxşı Təkliflər </a></li>
@@ -209,9 +209,9 @@
                             <a class="drop-btn" type="button" data-bs-toggle="collapse" data-bs-target="#big-dropdown"
                                 aria-expanded="false" aria-controls="collapseExample" style="cursor: pointer;">
                                 <a href="#"> New Arrivals </a>
-                                <fa-icon [icon]="chevron"></fa-icon>
+                                <!-- <fa-icon [icon]="chevron"></fa-icon> -->
                             </a>
-                            <ul class="collapse drop-menu" id="big-dropdown">
+                            <!-- <ul class="collapse drop-menu" id="big-dropdown">
                                 <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown1"
                                     aria-expanded="false" aria-controls="collapseExample">
                                     <a href="">Laptops & Computers</a>
@@ -223,7 +223,7 @@
                                         <li><a href="">Computers</a></li>
                                     </ul>
                                 </li>
-                                <!-- <li *ngFor="let department of departments;index as i" class="sub-dropdown"
+                                <li *ngFor="let department of departments;index as i" class="sub-dropdown"
                                 data-toggle="collapse" attr.data-target="#subdrop{{department.id}}" aria-expanded="false"
                                 aria-controls="collapseExample">
                                 <a href="">{{department.name}}</a>
@@ -233,7 +233,7 @@
                                         <a href="">{{category.name}}</a>
                                     </li>
                                 </ul>
-                            </li> -->
+                            </li>
                                 <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown2"
                                     aria-expanded="false" aria-controls="collapseExample">
                                     <a href="">Laptops & Computers</a>
@@ -267,7 +267,7 @@
                                         <li><a href="">Computers</a></li>
                                     </ul>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="#">Trending</a></li>
                         <li><a href="#">Hot Deals</a></li>
