--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -7,7 +7,7 @@
                         <h6>{{collections[0]?.subtitle}}</h6>
                         <h1>{{collections[0]?.title}}</h1>
                         <div class="price">
-                            <del class="old-price">{{collections[0]?.product.price}}</del>
+                            <del class="old-price">{{collections[0]?.product.price}} ₼</del>
                             <span class="new-price">$299<sup>.99</sup></span>
                         </div>
                         <a [routerLink]="['/app/product',collections[0]?.product.id]"
@@ -55,7 +55,7 @@
 </section>
 <section id="categories-slider">
     <div class="categories-slider-area">
-        <h3>Explore Popular Categories</h3>
+        <h3>Populyar Kateqoriyalar</h3>
         <div class="container">
             <owl-carousel-o [options]="options">
                 <ng-template carouselSlide>
