User adress table issue fixed

--- a/Front/final-project/src/app/views/app/checkout/checkout.component.html
+++ b/Front/final-project/src/app/views/app/checkout/checkout.component.html
@@ -29,7 +29,7 @@
                     <div class="user-info">
                         <span>
                             <i class="ti ti-location-pin"></i>
-                            <p>Xırdalan, Kristal Abşeron.</p>
+                            <p>{{user?.adress.adress1}}</p>
                         </span>
                         <a href="#">Yenilə</a>
                     </div>
