--- a/Front/final-project/src/app/views/app/shop-details/shop-details.component.html
+++ b/Front/final-project/src/app/views/app/shop-details/shop-details.component.html
@@ -80,7 +80,7 @@
                         </li>
                         <li class="nav-item" role="presentation">
                             <a class="active" data-bs-toggle="tab" data-bs-target="#review" type="button" role="tab"
-                                aria-selected="false">Rəy (6)</a>
+                                aria-selected="false">Rəy ({{product?.reviews.length}})</a>
                         </li>
                     </ul>
                     <div class="tab-content mt-4" id="myTabContent">
